--- a/package.json
+++ b/package.json
@@ -9,17 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.9.13",
+    "@langchain/core": "^0.3.31",
+    "@langchain/openai": "^0.3.17",
+    "@prisma/client": "^6.2.1",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
     "autoprefixer": "10.4.20",
     "eslint": "9.18.0",
     "eslint-config-next": "15.1.5",
+    "langchain": "^0.3.11",
     "next": "15.1.5",
     "postcss": "8.5.1",
     "react": "19.0.0",
+    "react-autosave": "^0.4.2",
     "react-dom": "19.0.0",
     "tailwindcss": "3.4.17",
-    "typescript": "5.7.3"
+    "typescript": "5.7.3",
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "prisma": "^6.2.1"
   }
 }
